--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
      </header>
      <div class="main-container">
         <div class="options">
-
+            <button>Button 1</button>
+            <button>Button 2</button>
+            <button>Button 3</button>
+            <button>Button 4</button>
+            <button>Button 5</button>
+            <button id="clear-grid">Clear Grid</button>
         </div>
         <!-- Grid div populated using Javascript -->
          <div class="grid">
