Added functionality for eraser and pen toggling with color shifts to indicate which button is selected

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <button>Button 1</button>
             <button>Button 2</button>
             <button>Button 3</button>
-            <button>Button 4</button>
-            <button>Button 5</button>
+            <button id="pen">Toggle Pen</button>
+            <button id="eraser">Toggle Eraser</button>
             <button id="clear-grid">Clear Grid</button>
 
             <!-- Slider for adjusting the grid size -->
