--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="options">
             <button>Button 1</button>
             <button>Button 2</button>
-            <button>Button 3</button>
+            <button id="rainbow">Toggle Rainbow</button>
             <button id="pen">Toggle Pen</button>
             <button id="eraser">Toggle Eraser</button>
             <button id="clear-grid">Clear Grid</button>
