Commented out surplus buttons for now

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
      </header>
      <div class="main-container">
         <div class="options">
-            <button>Button 1</button>
-            <button>Button 2</button>
+            <!-- <button>Button 1</button>
+            <button>Button 2</button> -->
             <button id="rainbow">Toggle Rainbow</button>
             <button id="pen">Toggle Pen</button>
             <button id="eraser">Toggle Eraser</button>
